--- a/packages/ui/styles.css
+++ b/packages/ui/styles.css
@@ -28,7 +28,7 @@
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
-  --radius: 0rem;
+  --radius: 0.5rem;
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
@@ -73,6 +73,15 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+.dark {
+  --background: oklch(0.1913 0 0);
+  --foreground: oklch(0.9612 0 0);
+  --primary: oklch(0.9612 0 0);
+  --primary-foreground: oklch(0.1913 0 0);
+  --primary-accent: oklch(0.7956 0.137 308.98);
+  --card: oklch(0.2478 0 0);
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -82,6 +91,7 @@
   --color-popover-foreground: var(--popover-foreground);
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
+  --color-primary-accent: var(--primary-accent);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
   --color-muted: var(--muted);
@@ -102,10 +112,6 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
-  --radius-sm: var(--radius);
-  --radius-md: var(--radius);
-  --radius-lg: var(--radius);
-  --radius-xl: var(--radius);
   --color-sidebar: var(--sidebar);
   --color-sidebar-foreground: var(--sidebar-foreground);
   --color-sidebar-primary: var(--sidebar-primary);
@@ -118,7 +124,7 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50 selection:bg-black/10;
+    @apply border-border outline-ring/50;
   }
 
   a,
